# apprentice

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: FINDINGS.md
extension/: package-lock.json  package.json
extension/src/: extension.ts
src/apprentice/: __init__.py  cli.py  evalharness.py  flywheel.py  lessons.py  llm.py  rag.py  server.py
